--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.10.1",
+    "jsonwebtoken": "^8.5.1",
     "mint-ui": "^2.2.13",
+    "mongodb": "^3.2.7",
+    "multer": "^1.4.1",
+    "mysql": "^2.17.1",
+    "supervisor": "^0.12.0",
     "swiper": "^4.5.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
