--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "jsonwebtoken": "^8.5.1",
     "mint-ui": "^2.2.13",
     "mongodb": "^3.2.7",
-    "multer": "^1.4.1",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1",
     "supervisor": "^0.12.0",
     "swiper": "^4.5.0",
     "vue": "^2.6.10",
+    "vue-loader": "^15.7.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.1.1"
   },
